<resources>
    <string name="facebook_app_id">438680656529406</string>
    <!--<string name="fb_login_protocol_scheme">dbb1dbfbf552210be1a989e8416e9158</string>-->
    <string name="app_name">Roomie</string>
    <string name="welcome_app_name"> Welcome To Roomie</string>
    <string name="title_activity_home">Home</string>
    <string name="user_login_hint">User Name*</string>
    <string name="password">Password*</string>
    <string name="password_hint_min_char">Password* (minimum 6 char)</string>
    <string name="login_with">Login with</string>
    <string name="login">Login</string>
    <string name="error_internet">No internet access</string>
    <string name="fbsignup">Facebook</string>
    <string name="googlesigup">Google</string>
    <string name="user_name">User Name*</string>
    <string name="user_id">Login id *</string>
    <string name="one_step_more">One more step</string>
    <string name="mobile_no">Mobile Number*</string>
    <string name="finish">Finish</string>
    <string name="name">Name*</string>
    <string name="error_all_fields">All * fields are mandatory </string>
    <string name="title_activity_groups_list">Groups</string>
    <string name="description">Description</string>
    <string name="tasks">Tasks</string>
    <string name="expense">Expenses</string>
    <string name="activites">Activities</string>
    <string name="profile">Profile</string>
    <string name="setting">Preferences</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="passbook">Passbook</string>
    <string name="R">R</string>
    <string name="O">O</string>
    <string name="M">M</string>
    <string name="I">I</string>
    <string name="E">E</string>
    <string name="ok">OK</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="grexoft">&#169; Grexoft Developers Private Limited</string>
    <string name="group_name">Group Name</string>
    <string name="add_person">Add members</string>
    <string name="title_activity_groups_create">Create Group</string>
    <string name="admin">admin</string>
    <string name="count">count</string>
    <string name="delete_group">Delete Group</string>
    <string name="exit_group">Exit Group</string>
    <string name="address_hint">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gendar">Gender</string>
</resources>
