<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_name"
                style="@style/edit_text_style_default"
                android:drawableLeft="@drawable/ic_group"
                android:drawablePadding="@dimen/margin_5dp"
                android:drawableStart="@drawable/ic_group"
                android:hint="@string/group_name"
                android:inputType="text"
                tools:ignore="TextFields" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_description"
                style="@style/edit_text_style_default"
                android:drawableLeft="@drawable/ic_group"
                android:drawablePadding="@dimen/margin_5dp"
                android:drawableStart="@drawable/ic_group"
                android:hint="@string/description"
                android:inputType="text"
                tools:ignore="TextFields" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_add"
            style="@style/button_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add_accent"
            android:drawableStart="@drawable/ic_add_accent"
            android:padding="@dimen/margin_12dp"
            android:text="@string/add_person"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_exit"
            style="@style/button_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_remove_accent_24dp"
            android:drawableStart="@drawable/ic_remove_accent_24dp"
            android:padding="@dimen/margin_12dp"
            android:text="@string/exit_group"
            android:visibility="gone"
            android:textColor="@color/colorAccent" />
        <Button
            android:id="@+id/btn_delete"
            style="@style/button_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:drawableLeft="@drawable/ic_delete_accent_24dp"
            android:drawableStart="@drawable/ic_delete_accent_24dp"
            android:padding="@dimen/margin_12dp"
            android:text="@string/delete_group"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_count"
            style="@style/normal_text_style"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:padding="@dimen/margin_8dp"
            android:text="@string/count"
            android:visibility="visible" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/membersList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:visibility="visible" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>