<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/material"
    android:fillViewport="true">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingPrefix">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_32dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_rupee_indian"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_dollar_coin_money"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_dollar_coin_money"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_4dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_euro"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_turkish_lire_symbol"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_great_britain_pound"
                    tools:ignore="ContentDescription" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/R"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/O"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/O"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/M"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/I"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/E"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    tools:ignore="ContentDescription" />


            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">


            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="@dimen/margin_5dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/user_id"
                android:textColor="@color/text_color_grey_dark"
                tools:ignore="TextFields" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_vpn_key_grey_24dp"
                android:drawablePadding="@dimen/margin_5dp"
                android:drawableStart="@drawable/ic_vpn_key_grey_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/text_color_grey_dark"
                tools:ignore="TextFields" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/tvForgot"
            style="@style/small_text_style"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/forgot_password"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:padding="@dimen/margin_18dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:visibility="gone" />

        <TextView
            style="@style/large_text_style"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:padding="@dimen/margin_8dp"
            android:text="@string/login_with"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_fb_login"
            style="@style/com_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginLeft="@dimen/margin_4dp"
            android:layout_marginRight="@dimen/margin_4dp"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:drawableLeft="@drawable/ic_facebook_letter_logo"
            android:drawableStart="@drawable/ic_facebook_letter_logo"
            android:gravity="center_vertical"
            android:minHeight="44dp"
            android:text="@string/fbsignup"
            android:textAlignment="gravity" />

        <Button
            android:id="@+id/btn_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/common_google_signin_btn_text_dark"
            android:gravity="center_vertical"
            android:text="@string/googlesigup"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:visibility="gone" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:visibility="gone" />


        <TextView
            style="@style/normal_text_style"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:padding="@dimen/margin_8dp"
            android:text="@string/grexoft"
            android:textColor="@android:color/white"
            android:visibility="visible" />

    </LinearLayout>


</ScrollView>