<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/extra_large_text_style"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/margin_5dp"
                android:text="@string/welcome_app_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/tvheading"
                style="@style/large_text_style"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_32dp"
                android:padding="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:text="@string/one_step_more"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_user_24dp"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:textColor="@color/text_color_light_black"
                    android:drawableStart="@drawable/ic_user_24dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/et_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:focusable="false"
                    android:textColor="@color/text_color_light_black"
                    android:textIsSelectable="false"
                    android:hint="@string/user_id"
                    android:longClickable="false"
                    android:inputType="text"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:hint="@string/password_hint_min_char"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_vpn_key_grey_24dp"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:textColor="@color/text_color_light_black"
                    android:drawableStart="@drawable/ic_vpn_key_grey_24dp"
                    android:inputType="textPassword"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:textColor="@color/text_color_light_black"
                    android:drawableStart="@drawable/ic_phone_android_black_24dp"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:maxLength="10"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_finish"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/margin_18dp"
                android:text="@string/finish"
                android:textAlignment="center" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
